# opencv

./: .gitignore  README.md
cpp_opencv/: CMakeLists.txt
cpp_opencv/bitwise/: CMakeLists.txt  bitwise.cpp
cpp_opencv/blur/: CMakeLists.txt  blur.cpp
cpp_opencv/contour/: CMakeLists.txt  contour.cpp
cpp_opencv/display/: CMakeLists.txt  DisplayImage.cpp  DisplayVideo.cpp
cpp_opencv/drawShapes/: CMakeLists.txt  drawShapes.cpp
cpp_opencv/edgedetection/: CMakeLists.txt  edgedetection.cpp
cpp_opencv/essential_functions/: CMakeLists.txt  basic.cpp
cpp_opencv/histogram/: CMakeLists.txt  histogram.cpp
cpp_opencv/masking/: CMakeLists.txt  masking.cpp
cpp_opencv/resize/: CMakeLists.txt  rescale_photo.cpp  rescale_video.cpp
cpp_opencv/spaces/: CMakeLists.txt  spaces.cpp
cpp_opencv/splitmerge/: CMakeLists.txt  splitmerge.cpp
cpp_opencv/threshold/: CMakeLists.txt  threshold.cpp
cpp_opencv/transformation/: CMakeLists.txt  transformation.cpp
py_opencv/: basic.py  bitwise.py  blur.py  contours.py  draw.py  edgedetection.py  histogram.py  livewWebcam.py  masking.py  read.py  rescale.py  spaces.py  splitmerge.py  threshold.py  transformation.py
